# ls_fsize_seminar

./: CMakeLists.txt  Seminar_1.cpp  Seminar_modified.cpp  ls_fsize.cpp  ls_fsize.h  test.cpp
include/: ls_fsize.h
